Closed
Bug 644084
Opened 15 years ago
Closed 15 years ago
crash [@ nsAccessNodeWrap::get_attributesForNames(unsigned short, unsigned short**, short*, unsigned short**)]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
VERIFIED
FIXED
mozilla5
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | .x+ |
People
(Reporter: MarcoZ, Assigned: surkov)
Details
(Keywords: crash, Whiteboard: [A11Y Priority 1])
Crash Data
Attachments
(2 files)
|
827 bytes,
patch
|
MarcoZ
:
review+
|
Details | Diff | Splinter Review |
|
731 bytes,
patch
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-fa75b724-d2f2-47d6-bd60-5746b2110323 .
=============================================================
I found this while trying to reproduce reports that JAWS and Window-Eyes do not work with Firefox 4 under Windows XP. While JAWS virtual cursor simply doesn't work, running Window-Eyes with Firefox 4 produces this crash reliably.
This is isolated to Windows XP, does not happen on Windows 7.
| Reporter | ||
Updated•15 years ago
|
Component: Disability Access → Disability Access APIs
Product: Firefox → Core
QA Contact: disability.access → accessibility-apis
Target Milestone: --- → mozilla2.0
| Assignee | ||
Comment 1•15 years ago
|
||
regression from bug 541618 (http://hg.mozilla.org/releases/mozilla-2.0/diff/117fe7a234cc/accessible/src/msaa/nsAccessNodeWrap.cpp#l1.152)
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #521134 -
Flags: review?(marco.zehe)
| Assignee | ||
Updated•15 years ago
|
blocking2.0: --- → ?
| Reporter | ||
Comment 2•15 years ago
|
||
Comment on attachment 521134 [details] [diff] [review]
patch
r=me. This fixes the initial crash on startup, and a first page comes up in WE with the virtual buffer working. However, then activating a link to go to any other page causes another crash. Unfortunately, I can't debug this since my XP is not a good install really and debugging always means a freezing screen reader so i can't work the VStudio UI. So there seem to be other parts of the code that react badly on XP now somehow.
Attachment #521134 -
Flags: review?(marco.zehe) → review+
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> Do we have a stack for the comment 2 case?
it sounds crashreported is switched off on local builds (perhaps it doesn't make sense at all in this case), and Marco can use VS (per comment 2) to get it locally.
Updated•15 years ago
|
blocking2.0: ? → .x+
Whiteboard: [A11Y Priority 1]
| Assignee | ||
Comment 5•15 years ago
|
||
| Assignee | ||
Updated•15 years ago
|
Whiteboard: [A11Y Priority 1] → [A11Y Priority 1][fx4-rc-ridealong][has reviewed patch]
| Assignee | ||
Comment 6•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [A11Y Priority 1][fx4-rc-ridealong][has reviewed patch] → [A11Y Priority 1]
Target Milestone: mozilla2.0 → mozilla2.2
| Reporter | ||
Comment 7•15 years ago
|
||
Verified fixed in ▪Build-Identifikator: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.2a1pre) Gecko/20110329 Firefox/4.2a1pre (but actually running on XP of course, not as shwon here on Windows 7)
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Crash Signature: [@ nsAccessNodeWrap::get_attributesForNames(unsigned short, unsigned short**, short*, unsigned short**)]
You need to log in
before you can comment on or make changes to this bug.
Description
•