Bug 644084 - crash [@ nsAccessNodeWrap::get_attributesForNames(unsigned short, unsigned short**, short*, unsigned short**)], r=marcoz, a=blocking2.x+